Mon Aug  8 18:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/advanced_resource.cpp:
          Added include of tao/Protocol_Factory.h to not get compile errors
          when all protocols are disabled. Thanks to Arvind S. Krishna
          <arvindk at dre dot vanderbilt dot edu> for reporting this

Mon Aug  8 10:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Collocation_Oneway_Tests/Collocation_Oneway_Tests.mpc:
        * tests/Collocation_Exception_Test/Collocation_Excep_Test.mpc:
          Made projects unique

Mon Aug  8 08:55:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/ImplRepo/nestea_i.cpp:
          Fixed invalid delete

        * tao/PortableServer/Servant_Base.cpp:
          Fixed bug when invoking collocated oneways with SYNC_WITH_SERVER
          is set

        * tests/Collocation_Oneway_Tests/*:
          New test for collocated oneways. Thanks to Vito Bico
          <vbica at qualcomm dot com> for making this test to reproduce
          the bug in Servant_Base.

        * tests/Collocation_Exception_Test/*:
          New test for testing exceptions in collocated case

        * rules.tao.GNU:
          Removed TAO libraries, MPC now handles this.

        * tests/Hello/Hello.mpc:
          Added -St and -Sa as idl flags. This test doesn't need Any
          and TypeCode and this way we can get the footprint down more
          when AnyTypeCode refactoring is ready.

Fri Aug 05 07:49:26 2005  Simon Massey  <sma@prismtech.com>

        * TAO version 1.4.7 released.

Tue Aug  2 21:18:02 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/fe/idl.yy:
        * TAO_IDL/fe/y.tab.cpp:

          Fixed some mismatched allocate/deallocate errors. Thanks to
          Johnny Willemsen <jwillemsen@rememdy.nl> for pointing them
          out.

Tue Aug  2 13:01:58 2005  Steve Totten  <totten_s@ociweb.com>
